[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.14"
num-iter = "0.1.42"

[profile.release]
opt-level = 3
overflow-checks = true